--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
     <groupId>com.coldridge.valley</groupId>
     <artifactId>tomcat-learn</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
